# context-configuration

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/: example.py
src/context_configuration/: __init__.py  context_configuration.py  default_property_source_loader.py  protocol.py
src/context_configuration/converter/: __init__.py  dataclass_converter.py  default_converter.py  iso_format_datetime_converter.py
src/context_configuration/property_source/: __init__.py  abstract_property_source.py  cli_property_source.py  dictionary_property_source.py  env_vars_property_source.py  pyyaml_property_source.py
tests/converter/: test_dataclass_converter.py  test_iso_format_datetime_converter.py
tests/property_source/: test_cli_property_source.py  test_dictionary_property_source.py  test_env_vars_property_source.py  test_pyyaml_property_source.py
tests/property_source/data/: pyyaml_test_properties.yaml
