[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
authors = [
    {name = "Detlef Wuppermann", email = "detlef@coding-on-my-mind.com"},
]

name = "context-configuration"
version = "0.0.2"
readme = "README.md"
license = "License :: OSI Approved :: MIT License"
description = "Configuration management emulating Springs configuration management based on profiles and annotations."
requires-python = ">=3.9"

dependencies = [
    "PyYAML == 6.0.2",
]

keywords = ["configuration", "context", "yaml", "cli", "envvars", "bean"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
homepage = "https://coding-on-my-mind.com"
repository = "https://github.com/coding-on-my-mind/context-configuration"
issues = "https://github.com/coding-on-my-mind/context-configuration/issues"

[project.optional-dependencies]
dev = [
    "pytest == 7.4",
    "pytest-mock == 3.11.1",
    "pytest-cov == 4.1.0",
    "coverage == 7.4.1",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = [
    "./src"
]
addopts = [
    "--import-mode=importlib",
]
